--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,4 @@
+
 //Ising Model Project part of M1 computing project
 Copyright (c) 2012 Rémi Eté & Adrien Girard, 
 All Right Reserved.
@@ -7,31 +8,31 @@ based upon this software are permitted. Any copy of this software or
 of any derivative work must include the above copyright notice, this
 paragraph and the one after it.
 
-It is shared with "adribrout".
-
-
 
 ########### INSTALLATION #############
 
 To install this software type in bash shell :
 
-'sudo ./Configure.sh'
-
-This will configure your computer for installation
-Basically it moves or removes some file for installation. 
-
-Then type :
-
 'sudo ./Configure.sh install'
 
-This will 
+This will configure your computer for installation
+Basically it moves or removes some file for installation, updated 
+your computer for all packages needed. 
 You must write the sudo prefix because of 
 'apt-get install' calling. Open the script and take 
 a look to be sure.
 
-'qmake -o makefile isingmodel.pro'
+Then type :
 
-'make'
+'sudo ./Configure.sh compile'
+
+This will compile the whole programm.
+
+To clean all futile files, type :
+
+>'sudo ./Configure clean'
+or
+>'make clean'
 
 ########### LAUNCH IT !!! ############
 
@@ -39,13 +40,12 @@ You can launch it via :
 
 'isingmodel'
 
-Alone it just show you the usage. You must options to 
-run it!
+Alone it just show you the "help option". You must set options
+to run it!
 
 ########## UNINSTALLATION ############
 
-This will only clean the file installed that you 
-won't need anymore, then type :
+Simply type :
 
 >./Configure uninstall
 
